style.css
* {
    margin: 0;
    padding: 0;
}

:root {
    --dark-color: rgb(39, 39, 39);
    --light-color: white;
}

html.simple-page {
    height: 100%;
}

body {
    font-family: 'Open Sans', sans-serif;
    color: var(--dark-color);
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    height: 100%;
}

.container {
    max-width: 900px;
    margin: 0 auto;
    width: 100%;
}

.container-flex {
    display: flex;
    justify-content:space-between;
}

header {
    display: flex;
    align-items: center;
    width: 100%;
    height: 70px;
    position: fixed;
    z-index: 1;
    background-color: var(--light-color);
}


ul {
    display: flex;
    /* justify-content: flex-end; */
    /* flex: 4;
    margin-left: auto; */
    
}

ul li {
    list-style-type: none;
}

li i {
    font-size: 22px;
}

ul a {
    margin-left: 30px;
    font-size: 12px;
    text-decoration: none;
    text-transform: uppercase;
    color: var(--dark-color);
    
}

.logo {
    font-size: 18px;
    letter-spacing: 10px;
    text-transform: uppercase;
}

.logo a { 
    text-decoration: none;
    color: var(--dark-color);
}

main {
    padding-top: 70px;
}

main.simple-page {
    display: flex;
    align-items: center;
    height: 100%;
}

section {
    margin-top: 70px;
}

.heading {
    text-align: center;
    margin-bottom: 30px;
}

.heading h2 { 
    font-size: 28px;
    font-weight: 300;
    text-transform: uppercase;
}

.section-content {
    display: flex;
    align-items: center;
}

.section-content img {
    width: 260px;
    height: auto;
    border-radius: 50%;
    margin-left: 50px;
}

.items {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
}

.item {
    width: 260px;
    margin-bottom: 30px;
}

 .dark-mode-button {
    font-size: 10px;
    font-weight: bold;
    position: fixed;
    top: 50%;
    left: -70px;
    text-transform: uppercase;
}

/* start dark mode toggle button */
.dark-mode-button:hover {
    left: 0px;
}

#dark-mode {
    cursor: pointer;
    color: var(--light-color);
    background-color: var(--dark-color);
    padding: 10px 20px 10px 5px;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.3);
}

#light-mode {
    cursor: pointer;
    display: none;
    color: var(--dark-color);
    background-color: var(--light-color);
    padding: 10px 20px 10px 5px;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;  
}
/* end dark mode toggle button */


/* .skills-icon {
    text-align: center;
}

.skills-icon i {
    font-size: 22px;
}

.skills-icon p {
    font-weight: bold;
}

.skills-icon img {
    height: 20px;
} */

#skills-section .items p {
    font-weight: bold;
}

footer {
    display: flex;
    align-items: center;
    font-size: 12px;
    margin-top: 150px;
    height: 70px;
    /* border-top: 1px solid rgb(134, 134, 134); */
}

footer.simple-page {
    margin-top: auto;
}

footer i {
    font-size: 22px;
}

footer a {
    color: var(--dark-color);
}


@media only screen and (max-width: 940px) {
    body {
      margin-left: 20px;
      margin-right: 20px;
    }

    .container-flex {
        margin-left: 0;
        margin-right: 20px;
    }
  }

@media only screen and (max-width: 600px) {
    .section-content, .container-flex {
      flex-direction: column;
      align-items: center;
    }

    .section-content img {
        margin-left: 0;
        margin-top: 20px;
    }

    .logo {
        margin-bottom: 10px;
    }

    .items {
        display: block;
    }

    main.simple-page {
        text-align: center;
    }

    #skills-section .items p {
        margin-bottom: 20px;
    }

    .dark-mode-button {
        top: 10%;
    }

    footer {
        margin-top: 30px;
    }
  }

